[package]
name = "tournament_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.2"
itertools = "0.11.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.166", features = ["derive"]}
serde_yaml = "0.9.22"
